--- a/main.css
+++ b/main.css
@@ -1,3 +1,159 @@
-h1 {
-    color: red;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #DADADA;
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+button {
+    box-shadow: 0 -.3em 0 0 rgba(34, 36, 38, .15) inset;
+    border: none;
+}
+
+.cart-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    padding: 10px;
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.cart-wrap > div {
+    width: 100%;
+    background: white;
+    border-radius: 5px;
+    margin: 10px;
+}
+
+.list-wrap {
+    flex: 3 1 400px;
+    min-height: 100px;
+    height: 100%;
+}
+
+.list-input-wrap {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    border-bottom: 1px #CCC solid;
+}
+
+.list-input-wrap input {
+    max-width: 100%;
+    flex: 1 0 auto;
+    border: 1px solid #CCC;
+    border-radius: 5px 0 0 5px;
+    border-right: none;
+    font-size: 0.9rem;
+    padding: 5px;
+}
+
+.list-input-wrap button {
+    width: 100px;
+    height: 40px;
+    flex: 0 0 auto;
+    border: none;
+    background-color: #2185D0;
+    border-radius: 0 5px 5px 0;
+    box-shadow: 0 -.3em 0 0 rgba(34, 36, 38, .15) inset;
+    color: white;
+    font-size: 0.9rem;
+    font-weight: bold;
+}
+
+.list-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    border-bottom: 1px solid #CCC;
+}
+
+.list-item:last-child {
+    border-bottom: none;
+}
+
+.list-item .item-name {
+    font-size: 0.9rem;
+    line-height: 30px;
+}
+
+.list-item .item-count .round-button {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    font-size: 1rem;
+    color: white;
+    font-weight: bold;
+    border: none;
+}
+
+.list-item .item-count .round-button i {
+    font-style: normal;
+    vertical-align: baseline;
+}
+
+.list-item .item-count .round-button.substract {
+    background-color: #DB2828;
+} 
+
+.list-item .item-count .round-button.add {
+    background-color: #21BA45;
+} 
+
+.list-item .item-count span {
+    display: inline-block;
+    background-color: #ccc;
+    border-radius: 3px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    vertical-align: baseline;
+}
+
+.list-item .item-controls .buy-button {
+    width: 80px;
+    height: 30px;
+    border: 1px #CCC solid;
+    background-color: #EEE;
+    border-radius: 3px;
+    font-weight: bold;
+    font-size: 0.6rem;
+    color: #555;
+}
+
+.list-item .item-controls .remove-button {
+    width: 30px;
+    height: 30px;
+    border: none;
+    background-color: #DB2828;
+    border-radius: 3px;
+    font-weight: bold;
+    font-size: 0.6rem;
+    color: white;
+}
+
+.summary {
+    flex: 1 3 200px;
+    min-height: 100px;
+    width: 350px;
+}
+
+.summary-section {
+    padding: 15px;
+    border-bottom: 1px #CCC solid;
+}
+
+.summary-section.summary-title {
+    font-weight: bold;
+}
+
+.summary-section:last-child {
+    border-bottom: none;
 }
